# gigmachine

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
backend/: config.py  main.py
backend/crud/: academic_profile.py  data_source.py  funding_opportunity.py  match.py
backend/db/: base.py  mixins.py  session.py
backend/models/: __init__.py  academic_profile.py  associations.py  data_source.py  funding_opportunity.py  match.py  research_index.py
backend/routers/: academic_profiles.py  data_sources.py  funding_opportunities.py  health.py  matches.py
backend/schemas/: academic_profile.py  data_source.py  funding_opportunity.py  match.py
backend/services/: matching.py
backend/services/scraping/: api_scraper.py  base.py  registry.py  rss_scraper.py  web_scraper.py
backend/tasks/: scheduler.py  scrape_jobs.py
backend/utils/: privacy.py  text.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Dashboard.tsx  MatchesPage.tsx  OpportunitiesPage.tsx  ProfilePage.tsx
frontend/src/types/: index.ts
tests/: conftest.py
tests/test_services/: test_matching.py
tests/test_utils/: test_privacy.py
